SVG size and alignment fixed!

--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -1,12 +1,21 @@
 
 
 .node {
-  width: 25px;
-  height: 25px;
+  width: 3vh;
+  height: 3vh;
   outline: 1px solid rgb(175, 216, 248);
   display: inline-block;
+  vertical-align: top;
+  padding-right: 0.2vh;
+  padding-left: 0.2vh;
+  padding-top: 0.2vh;
+  padding-bottom: 0.2vh;
 }
-
+.node-svg {
+  width: 3vh !important;
+  height: 3vh !important;
+  display: block !important;
+}
 .node-finish {
   background-color: red;
 }
